Fixing sidebar wrap bug #19

--- a/stylesheets/structure/_main.scss
+++ b/stylesheets/structure/_main.scss
@@ -10,7 +10,8 @@
 }
 
 
-body.collection {
+body.collection,
+body.series {
 
   article {
     margin-left: 200px;
